--- a/structurizr-analysis/build.gradle
+++ b/structurizr-analysis/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     compile files("${System.getProperty('java.home')}/../lib/tools.jar")
 
     testCompile 'junit:junit:4.12'
-
+    testCompile 'org.assertj:assertj-core:3.14.0'
 }
 
 sourceSets {
