Prototype of importing a software architecture model defined as an FC4 YAML DSL.

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = 'structurizr'
 include 'structurizr-adr-tools'
 include 'structurizr-analysis'
 include 'structurizr-annotations'
+include 'structurizr-fc4'
 include 'structurizr-mermaid'
 include 'structurizr-plantuml'
 include 'structurizr-dot'
