Initial version of the graphviz extension (includes a few cursory tests).

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'structurizr-adr-tools'
 include 'structurizr-analysis'
 include 'structurizr-annotations'
 include 'structurizr-fc4'
+include 'structurizr-graphviz'
 include 'structurizr-mermaid'
 include 'structurizr-plantuml'
 include 'structurizr-dot'
