--- a/structurizr-adr-tools/build.gradle
+++ b/structurizr-adr-tools/build.gradle
@@ -1,6 +1,8 @@
+version = '1.3.6'
+
 dependencies {
 
-    compile 'com.structurizr:structurizr-core:1.3.5'
+    compile 'com.structurizr:structurizr-core:1.4.0'
 
     testCompile 'junit:junit:4.12'
 
