--- a/structurizr-websequencediagrams/build.gradle
+++ b/structurizr-websequencediagrams/build.gradle
@@ -1,6 +1,8 @@
+version = '1.3.6'
+
 dependencies {
 
-    compile 'com.structurizr:structurizr-core:1.3.5'
+    compile 'com.structurizr:structurizr-core:1.4.3'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.4.0'
