--- a/structurizr-mermaid/build.gradle
+++ b/structurizr-mermaid/build.gradle
@@ -1,7 +1,8 @@
+version = '1.3.5'
+
 dependencies {
 
-    compile 'com.structurizr:structurizr-core:1.3.5'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.0'
+    compile 'com.structurizr:structurizr-core:1.4.5'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.4.0'
