--- a/structurizr-examples/build.gradle
+++ b/structurizr-examples/build.gradle
@@ -6,9 +6,10 @@ dependencies {
     compile project(':structurizr-graphviz')
     compile project(':structurizr-mermaid')
     compile project(':structurizr-plantuml')
+    compile project(':structurizr-websequencediagrams')
     compile project(':structurizr-spring')
 
-    compile 'com.structurizr:structurizr-client:1.3.5'
+    compile 'com.structurizr:structurizr-client:1.4.5'
 
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'org.slf4j:slf4j-simple:1.7.21'
