Added more tests.

--- a/structurizr-plantuml/build.gradle
+++ b/structurizr-plantuml/build.gradle
@@ -2,10 +2,11 @@ version = '1.4.0'
 
 dependencies {
 
-    compile 'com.structurizr:structurizr-client:1.4.5'
+    compile 'com.structurizr:structurizr-core:1.4.7'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.assertj:assertj-core:3.4.0'
+    testCompile 'com.structurizr:structurizr-client:1.4.7'
 
 }
 
