initial fluent-api implementation

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,9 +4,11 @@ include 'structurizr-adr-tools'
 include 'structurizr-analysis'
 include 'structurizr-annotations'
 include 'structurizr-graphviz'
+include 'structurizr-fluent-api'
 include 'structurizr-mermaid'
 include 'structurizr-plantuml'
 include 'structurizr-dot'
 include 'structurizr-examples'
 include 'structurizr-spring'
 include 'structurizr-websequencediagrams'
+
