--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'structurizr-adr-tools'
 include 'structurizr-analysis'
 include 'structurizr-annotations'
 include 'structurizr-graphviz'
+include 'structurizr-ilograph'
 include 'structurizr-mermaid'
 include 'structurizr-plantuml'
 include 'structurizr-dot'
