--- a/structurizr-examples/build.gradle
+++ b/structurizr-examples/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(':structurizr-dot')
     compile project(':structurizr-graphviz')
     compile project(':structurizr-mermaid')
+    compile project(':structurizr-ilograph')
     compile project(':structurizr-plantuml')
     compile project(':structurizr-websequencediagrams')
     compile project(':structurizr-spring')
