--- a/structurizr-graphviz/build.gradle
+++ b/structurizr-graphviz/build.gradle
@@ -2,9 +2,10 @@ version = '1.5.0'
 
 dependencies {
 
-    compile 'com.structurizr:structurizr-core:1.7.0'
+    compile 'com.structurizr:structurizr-core:1.9.1'
 
     testCompile 'junit:junit:4.12'
+    testCompile 'com.structurizr:structurizr-client:1.9.1'
 
 }
 
