Initial version of combined and refactored exporters (issues #48 and #39).

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'structurizr-ilograph'
 include 'structurizr-mermaid'
 include 'structurizr-plantuml'
 include 'structurizr-dot'
+include 'structurizr-export'
 include 'structurizr-examples'
 include 'structurizr-spring'
 include 'structurizr-websequencediagrams'
