Removal/clean up of deprecated modules.

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,11 +4,8 @@ include 'structurizr-adr-tools'
 include 'structurizr-analysis'
 include 'structurizr-annotations'
 include 'structurizr-graphviz'
-include 'structurizr-ilograph'
-include 'structurizr-mermaid'
+include 'structurizr-diff'
 include 'structurizr-plantuml'
-include 'structurizr-dot'
 include 'structurizr-export'
 include 'structurizr-examples'
 include 'structurizr-spring'
-include 'structurizr-websequencediagrams'
